# learn_rust_web

./: .gitignore  404.html  Cargo.toml  build.rs  index.html  package.json  web.dio
.github/workflows/: docs.yml
assets/: 1_初始化项目.html-2CYn3IA3.js  1_初始化项目.html-6CtoPGSy.js  2_编写简单的grpc接口.html--FVHx5Pd.js  2_编写简单的grpc接口.html-5DgxmtTS.js  404.html-QmlfVgzL.js  app-tPJb1WTQ.js  index.html-0z9RK2_C.js  index.html-kGn_qG_O.js  resume.html-0-H_TPxt.js  resume.html-c11YJw1A.js  style-W7fcsQ4F.css
docs/: README.md
docs/.vuepress/: client.js  config.js
docs/.vuepress/layouts/: Layout.vue
docs/resume/: resume.md
docs/rust/: 1_初始化项目.md  2_编写简单的grpc接口.md
proto/: api.proto  request.proto  response.proto
resume/: resume.html
rust/: 1_初始化项目.html  2_编写简单的grpc接口.html
src/: lib.rs  main.rs
src/mysql/: README.md  diesel_connect_mysql.rs  mod.rs
src/mysql/model/: models.rs
src/mysql/schema/: schema.rs
src/proto/: api.rs  request.rs  response.rs
src/user/: user_service.rs
tests/: test_get_online_user.md  test_get_online_user.rs  test_grpc_api.md  test_grpc_api.rs  test_query_mysql.md  test_query_mysql.rs
