[package]
name = "web"  # 包名称为web
version = "0.1.0"  # 包版本为0.1.0
edition = "2021"  # 包版行为2021

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10.2"
tonic-web = { version = "0.10.2" }
prost = "0.12.3"
tokio-stream = "0.1.14"
tower = "0.4.13"
[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
